# Noctem-beta

./: .gitignore  README.md
backend/: .env.example  Dockerfile  pyproject.toml  railway.toml  start.py
backend/app/: auth.py  db.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: carriers.py  loads.py  market.py  pins.py  transcripts.py  voice.py
backend/app/services/: fmcsa.py  market.py  matching.py  negotiation.py
backend/seed/: seed_data.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/(auth)/callback/: route.ts
dashboard/src/app/(auth)/login/: page.tsx
dashboard/src/app/(dashboard)/: layout.tsx
dashboard/src/app/(dashboard)/loads/: page.tsx
dashboard/src/app/(dashboard)/market/: page.tsx
dashboard/src/app/(dashboard)/onboarding/: page.tsx
dashboard/src/app/(dashboard)/voice/: page.tsx
dashboard/src/app/api/config/: route.ts
dashboard/src/components/: MarketMap.tsx  ProfitabilityBadge.tsx  Sidebar.tsx
dashboard/src/lib/: api.ts  theme.ts  use-realtime.ts
fmcsa-service/: ARCHITECTURE.md  DEMO.md  dispatcher_models.py  dispatcher_scoring.py  dispatcher_store.py  dispatcher_voice.py  fmcsa.py  main.py  pyproject.toml
supabase/migrations/: 001_initial.sql  002_voice_pins.sql
voice-server/: .env.example  Dockerfile  pyproject.toml  railway.toml  server.py  start.py  tools.py
